TestSuite/Verification/Error/Parallel/Correctness/On-Device/Inter-Region/Accelerator/out/RecursionTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/RecursionTest.hxx"
#include "includes/cuda_lib_RecursionTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	int32_t result_IPVLpV2yKN;
	int32_t initial_4KoXJGDVlh;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		initial_4KoXJGDVlh = 0;
		result_IPVLpV2yKN = 0;
	}
	result_IPVLpV2yKN = counter(initial_4KoXJGDVlh);
	if (rank == 0) {
		Bit_Mask * mask_ptr_uZ4hNYDZub = new Bit_Mask(48,true);
		for (size_t i_ZA6ngbofY4 = 0; i_ZA6ngbofY4 < 24; ++i_ZA6ngbofY4) {
			mask_ptr_uZ4hNYDZub->setBarrier(i_ZA6ngbofY4);
		}
		boost::shared_ptr<Bit_Mask>boost_mask_ptr_uZ4hNYDZub (mask_ptr_uZ4hNYDZub);
		self_barrier(boost_mask_ptr_uZ4hNYDZub);
	}
	if (rank == 0) {
		if (result_IPVLpV2yKN != 4) {
			print("Recursion not correct!");
			MPI_Abort(MPI_COMM_WORLD, 1);
		}
	}
	finishExecution();
	finishGPUExecution();
	MPI_Finalize();
	return 0;


}

